erDiagram
    ligas ||--o{ equipos : idLiga
    equipos ||--o{ jugadores : idEquipo
    equipos ||--o{ partidos : "idLocal / idVisitante"

    ligas {
        INTEGER idLiga PK
        VARCHAR nombre
        VARCHAR temporada
        TEXT descripcion
    }
    equipos {
        INTEGER idEquipo PK
        INTEGER idLiga FK
        VARCHAR nombre
        VARCHAR entrenador
        INTEGER partidosGanados
        INTEGER partidosEmpatados
        INTEGER partidosPerdidos
        INTEGER partidosJugados
        INTEGER puntosFavor
        INTEGER puntosEnContra
        INTEGER puntosTotales
        INTEGER diferenciaPuntos
    }
    jugadores {
        INTEGER idJugador PK
        INTEGER idEquipo FK
        VARCHAR nombre
        VARCHAR apellido
        VARCHAR categoria
    }
    partidos {
        INTEGER idPartido PK
        INTEGER idLocal FK
        INTEGER idVisitante FK
        DATE fecha
        TIME hora
        VARCHAR lugar
        INTEGER puntosLocal
        INTEGER puntosVisitante
    }
    usuarios {
        INTEGER idUsuario PK
        VARCHAR usuario
        VARCHAR password_hash
    }
